@@ -1,10 +1,10 @@
 name    = marc-moose
 author  = Frédéric Demians <f.demians@tamil.fr>
 license = Perl_5
-copyright_holder = Frederic Demians
-copyright_year   = 2011
+copyright_holder = Frédéric Demians
+copyright_year   = 2012
 
-version = 0.018
+version = 0.019
 
 [@Basic]
 [PkgVersion]
