@@ -13,36 +13,51 @@ use Moose;
 #);
 
 
+=method begin
+
+
+=cut
+
 sub begin {
     return "";
 }
 
+
+=method end
+
+
+=cut
 
 sub end {
     return "";
 }
 
 
+=method parse
+
+Return a MARC::Moose::Record object build from a parsed string
+
+=cut
+
 sub parse {
-    return MARC::Moose::Record->new();
+return MARC::Moose::Record->new();
 };
 
 __PACKAGE__->meta->make_immutable;
 
 1;
 
-=method begin
 
-=method end
-
-=method parse
-
-Return a MARC::Moose::Record object build from a parsed string
 
 =head1 SEE ALSO
 
 =for :list
 * L<MARC::Moose>
-* L<MARC::Moose::Parser::Iso2709>
-* L<MARC::Moose::Parser::MARC::Moosexml>
-* L<MARC::Moose::Parser::Isis>
+* L<MARC::Moose::Parser::Isis.pm
+* L<MARC::Moose::Parser::Iso2709.pm
+* L<MARC::Moose::Parser::Legacy.pm
+* L<MARC::Moose::Parser::Marcxml.pm
+* L<MARC::Moose::Parser::MarcxmlSax.pm
+* L<MARC::Moose::Parser::MarcxmlSaxSimple.pm
+* L<MARC::Moose::Parser::Yaml.pm
+
