@@ -11,11 +11,12 @@ use MARC::Moose::Parser::Isis;
 extends 'MARC::Moose::Reader::File';
 
 
-has parser => ( 
-    is => 'rw', 
-    isa => 'MARC::Moose::Parser',
-    default => sub { MARC::Moose::Parser::Isis->new() },
-);
+=attr parser
+
+By default, use L<MARC::Moose::Parser::Isis> to read L<MARC::Moose::Record>
+records from a file.
+
+has '+parser' => ( default => sub { MARC::Moose::Parser::Isis->new() } );
 
 
 override 'read' => sub {
@@ -39,7 +40,7 @@ __PACKAGE__->meta->make_immutable;
 
 1;
 
-=method read
+=head1 DESCRIPTION
 
 Read next available L<MARC::Moose::Record> from reader file using
 L<MARC::Moose::Parser::Isis> parser.
