@@ -3,3 +3,5 @@ Revision history for Perl module marc-moose
 0.019 
 
   - Add some tests
+  - Improve documentation
+  - Use SAX parser by default for MARCXML records
